added enums and volunteer and gender field
