# src/storage/api-docs/api-docs.json
@@ -1474,6 +1474,47 @@
                 }
             }
         },
+        "/api/donation-page/slug/{slug}": {
+            "get": {
+                "tags": [
+                    "Donation Page"
+                ],
+                "summary": "Display Donation Page",
+                "description": "Returns donation Page data",
+                "operationId": "7836e45bc74f74d116aaae13aa286fc6",
+                "parameters": [
+                    {
+                        "name": "slug",
+                        "in": "path",
+                        "description": "Donation Page slug",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "422": {
+                        "description": "Unprocessable Content"
+                    }
+                }
+            }
+        },
         "/api/donation-page/update/{id}": {
             "post": {
                 "tags": [
